   by either the Major or Minor version number. For example,
   moving from 1.0.0 to 1.0.1 will not make it happen, but
   going from 1.0.4 to 1.1.0 will. This therefore sets
   the assumption of what the "API" is :)

 * HTML Emails are now filtered through HTMLFilter,
   to protect against XSS attacks.

 * We no longer get that weird '1' on the upper left of
   the message list page.

1.0.0-RC1:

 * Fix calculation of timezones.

 * Rename of class files and other notices from Uebimiau to
   Telaen.

 * Enable marking READ messages as either READ or
   UNREAD upon logout. The default is UNREAD. This allows
   users who check their mail with other Email clients
   to see those messages as "new" and unread. SysAdmin can
   overrule user prefs by setting:
      $force_unmark_read_overrule;
      $force_unmark_read_settingyes;
   in config.php.
   Changes:
     o en_UK.txt: prf_unmark_read_on_exit
     o preferences.htm

----------------------------------------------------------------
Uebimiau - the "jimjag" patches:
----------------------------------------------------------------
--------
2.7.8p3
--------
 * "What is SPAM" regex now definable for each UM class.

 * Enable auto-population of the spam folder and
   add a user pref to auto-delete it at logout time.
   Spam folder options require the _autospamfolder
   variable in the Uebimiau class be TRUE.
     o en_UK.txt: spam_extended
                  prf_empty_spam_on_exit
     o preferences.htm

 * Make the spam folder a system folder.

 * If using cookies, have the login page explain why
   a login may not have succeeded due to cookie error
   (eg: user does not have cookies enabled). Only important
   if using cookie security. This required changes to the
   login themes and the lang file.
     o en_UK.txt :lng_cookie_not_enabled
                  lng_cookie_not_valid
     o login.htm

 * Store version number in pref's file; since new versions
   might change or add preferences, this means that UM